2006-10-30  Karsten Dambekalns  <karsten@typo3.org>

        * Fixed bug #3637 in EM (translation handling)

2006-10-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 3199: SUing to myself?
	* Fixed bug 3720: Multilanguage Flexforms don't work after migrating a site from one language to more languages

2006-10-17  Ernesto Baschny  <ernst@cron-it.de>

	* Fix: no more "ERR" or "Unpacking the language pack failed" in the translation handling with curl enabled.

2006-10-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fix: t3lib_db::exec_SELECTgetRows() did not free recordset

2006-10-13  Karsten Dambekalns  <karsten@typo3.org>

	* ADOdb system extension updated to upstream 4.93. Added danish translation, thanks to Peter Klein!

2006-10-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4021: array_merge error with PHP 5.0

2006-10-10  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #3777: thumbs.php looks for file in t3lib/gfx instead of typo3/gfx

2006-09-20  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a missing space in typo3/template.php

2006-09-15  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #3862: Tools>User Admin allows switching to disabled user

2006-09-14  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4219: := appendString() did not work because the check was made for "apppendString" (typo)

2006-09-11  Michael Stucki  <michael@typo3.org>

	* Fixed a tiny security problem in indexed search (for details, see http://typo3.org/teams/security/security-bulletins/typo3-20060911-1/)
	* Release of TYPO3 4.0.2

2006-09-08  Michael Stucki  <michael@typo3.org>

	* Updates to NEWS.txt
	* Fixed #4165: Link to TSconfig and TSref not working. Thanks to Andreas Wolf for providing a patch!

2006-09-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1268: plainMailEncoded not working with charset conversion

2006-09-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>
